--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
         div(class='d-flex align-items-center p-3 my-1 bg-azure-light-gray rounded shadow-sm')
             div(class='1h-1')
                 h1(class='h3 mb-0 text-azure-blue lh-1') Todo List
-                small(class='text-black') ExpressJS/MongoDB Sample Application
+                small(class='text-black') ExpressJS/MongoDB Sample Application in Azure
 
 
         block content
